--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,6 @@ notebooks/06_Prot/1ycq.fasta
 notebooks/06_Prot/pdb1olg.ent
 notebooks/06_Prot/pdb1tup.ent
 notebooks/06_Prot/pdb1ycq.ent
+
+notebooks/09_Other/output.SHAPEIT.20140226.chr20.wgs_sites.haps
+notebooks/09_Other/output.SHAPEIT.20140226.chr20.wgs_sites.haps.sample
