--- a/.gitignore
+++ b/.gitignore
@@ -215,6 +215,8 @@ notebooks/06_Prot/pdb1tup.ent
 notebooks/06_Prot/pdb1ycq.ent
 
 notebooks/08_Advanced/1tup.cif
+notebooks/08_Advanced/ag1000g.phase1.ar3.pass.3L.h5
+notebooks/08_Advanced/geno.parquet
 notebooks/08_Advanced/pdb1tup.ent
 
 notebooks/09_Other/data
